# discord_bot

./: .gitignore  alive.py  main.py  pyproject.toml
