[tool.poetry]
name = "repl_python3_discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
selenium = "^3.141.0"
bs4 = "^0.0.1"
pafy = "^0.5.5"
youtube_dl = "^2021.6.6"
Flask = "^2.0.1"
lxml = "^4.6.3"
PyNaCl = "^1.4.0"
textdistance = "^4.2.1"
weathercatcher = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
